hww-tagger/http/hwwexpose.yml
#letting the pod expose itself on port 8000
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hwwserver
  name: hwwexpose
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: hwwserver
  type: ClusterIP
